fix navbar dropdown alignment

--- a/src/components/NavBar/navBar-static.css
+++ b/src/components/NavBar/navBar-static.css
@@ -1,5 +1,6 @@
 a.dropdown-toggle {
   color: #ffffff;
+  text-align: center;
 }
 
 a.dropdown-toggle:hover{
